src/test/resources/compiler/parser/input/pass/mult_a.rule
-> action1 (0 <= a <= 0.5: 1, 0.5 < a <= 1: 1) 1.