src/test/resources/compiler/parser/input/fail/incomplet_alist.rule
pre -> +post1 +post2 action (0 <= a <= 0.5: 1, 0.5 < a <= 1).